BPER/DEVF/force-app/main/default/objects/RoleTypology__c/RoleTypology__c.object-meta.xml
<CustomObject>
    <label>Tipologia Ruolo</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Ruolo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipologia Ruoli</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>