BPER/DEVF/force-app/main/default/objects/RoleTypology__c/fields/Cod_pos_calcolato__c.field-meta.xml
<CustomField>
    <fullName>Cod_pos_calcolato__c</fullName>
    <label>Codice posizione calcolato</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100_5690</fullName>
            </value>
            <value>
                <fullName>100_9936</fullName>
            </value>
            <value>
                <fullName>100_8398</fullName>
            </value>
            <value>
                <fullName>100_8399</fullName>
            </value>
            <value>
                <fullName>100_8400</fullName>
            </value>
            <value>
                <fullName>100_8401</fullName>
            </value>
            <value>
                <fullName>100_8402</fullName>
            </value>
            <value>
                <fullName>100_8403</fullName>
            </value>
            <value>
                <fullName>100_8404</fullName>
            </value>
            <value>
                <fullName>100_8423</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>