BPER/DEVF/force-app/main/default/objects/RoleTypology__c/fields/PTF_AvailableEffortNumber__c.field-meta.xml
<CustomField>
    <fullName>PTF_AvailableEffortNumber__c</fullName>
    <label>Numero effort disponibile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>