BPER/DEVF/force-app/main/default/objects/RoleTypology__c/fields/PTF_Itinerante__c.field-meta.xml
<CustomField>
    <fullName>PTF_Itinerante__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flag itinerante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>