BPER/DEVF/force-app/main/default/objects/RoleTypology__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTF_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>